2016-01-29  Patrick Eriksson  <patrick.eriksson@chalmers.se>

	* Mscripts_arts/q2_oemiter.m: Now started.

2016-01-28  Patrick Eriksson  <patrick.eriksson@chalmers.se>

	* Mscripts_arts/q2_inv.m: Mainly work in this function. Some steps
	towards inversions.

2016-01-21  Patrick Eriksson  <patrick.eriksson@chalmers.se>

	* Settings/q_fields.rst:
	* Settings/q_std.m (q_std):
	* Mscripts_arts/q2_inv.m (q2_inv): Introduced the OEM-ML settings.

2016-01-19  Patrick Eriksson  <patrick.eriksson@chalmers.se>

	* Started to implement retrievals.

	* Mscripts_arts/q2_inv.m: Started.

	* Settings/q_std.m: Polished and removed handling of multiple
	fmodes.

	* Settings/q_multi.m: A help function to compile arrays of Q.

	* Mscripts_database/l1b_crop.m: Corrected bug in indexing of
	SubBandIndex.

	* Mscripts_qsystem/q2_check_q.m: Extended an error message.

2016-01-07  Patrick Eriksson  <patrick.eriksson@chalmers.se>

	* Work to make Qsmr independent of Atmlab's setting system. In
	addition, it is now expected that arts can be reached from any
	folder by calling arts4smr.

	* Settings/system_settings: Removed.

	* Mscripts_qsystem/q2_init.m: Matlab's search path now extended
	here.

	* Mscripts_qsystem/q2_set_path.m: Removed.

	* Mscripts_arts/q2_arts.m: New. Atmlab's arts-m shall not be used.

	* Settings/q_fields.rst: Extended and polished.

	* Mscripts_qsystem/q2_delete_workfolder.m:
	* Mscripts_qsystem/q2_create_workfolder.m: Creation and removal
	now using local code, not the atmlab functions.

	* Mscripts_database/q2_get_atm.m: Removed CIRA86. This to avoid a
	dependency on ATMLAB settings. MSIS90 should anyhow be superior.

2015-12-29  Patrick Eriksson  <patrick.eriksson@chalmers.se>

	* Adopted to changes in LOG and L1B structure format.

2015-12-21  Patrick Eriksson  <patrick.eriksson@chalmers.se>

	* Several tweaks and bug fixes. For example, hand-picked spectro
	data had no effect.

2015-12-21  Patrick Eriksson  <patrick.eriksson@chalmers.se>
