@@ -1,3 +1,7 @@
+2016-01-31  Patrick Eriksson  <patrick.eriksson@chalmers.se>
+
+	* Retrieval of species, baseline and pointing now in place. 
+
 2016-01-29  Patrick Eriksson  <patrick.eriksson@chalmers.se>
 
 	* Mscripts_arts/q2_oemiter.m: Now started.
